--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         extended: true
         
     - name: Build with Hugo
-      run: hugo --minify
+      run: hugo build --environment production
       
     - name: Deploy to remote host via FTPS
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
