Add link to map

--- a/hugo.toml
+++ b/hugo.toml
@@ -40,3 +40,5 @@ defaultContentLanguageInSubdir = true
   [params.identiT]
       [params.identiT.Forum]
           URL = 'https://forum.trans.nrw'
+      [params.identiT.Map]
+          URL = 'https://map.trans.nrw'
