--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,18 +34,8 @@ jobs:
         
     - name: Build with Hugo
       run: hugo build --environment production
-      
-    - name: Deploy to remote host via FTPS
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-        server: ${{ secrets.SFTP_HOST }}
-        username: ${{ secrets.SFTP_USERNAME }}
-        password: ${{ secrets.SFTP_PASSWORD }}
-        local-dir: ./public/
-        server-dir: /
-        protocol: ftps
 
-    - name: Copy site to VServer via SSH
+    - name: Deploy to VServer via SSH
       uses: burnett01/rsync-deployments@7.1.0
       with:
         switches: -avz --delete --rsync-path="rsync" --exclude='.git' --exclude='.github'
