Add correct ts link

--- a/hugo.toml
+++ b/hugo.toml
@@ -39,7 +39,7 @@ defaultContentLanguageInSubdir = true
 [params]
   [params.identiT]
       [params.identiT.Teamspeak]
-          URL = 'https://ts.trans.nrw'
+          URL = 'ts3server://ts.trans.nrw'
       [params.identiT.Forum]
           URL = 'https://forum.trans.nrw'
       [params.identiT.Map]
