--- a/hugo.toml
+++ b/hugo.toml
@@ -42,6 +42,7 @@ defaultContentLanguageInSubdir = true
           URL = 'ts3server://ts.trans.nrw'
       [params.identiT.Forum]
           URL = 'https://forum.trans.nrw'
+          meetups = 'https://forum.trans.nrw/forumdisplay.php?fid=13'
       [params.identiT.Map]
           URL = 'https://map.trans.nrw'
       [params.identiT.redaktion]
